--- a/Skola/projektarbete-react-ht21/projektarbete/package.json
+++ b/Skola/projektarbete-react-ht21/projektarbete/package.json
@@ -6,9 +6,13 @@
     "@testing-library/jest-dom": "^5.15.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "bootstrap": "^5.1.3",
+    "jquery": "^3.6.0",
+    "popper.js": "^1.16.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-image-gallery": "^1.2.7",
+    "react-image-lightbox": "^5.1.4",
     "react-responsive-carousel": "^3.2.22",
     "react-scripts": "^3.4.4",
     "web-vitals": "^1.1.2"
