--- a/Skola/projektarbete-react-ht21/projektarbete/package.json
+++ b/Skola/projektarbete-react-ht21/projektarbete/package.json
@@ -7,6 +7,7 @@
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "bootstrap": "^5.1.3",
+    "i": "^0.3.7",
     "jquery": "^3.6.0",
     "popper.js": "^1.16.1",
     "react": "^17.0.2",
@@ -15,6 +16,7 @@
     "react-image-lightbox": "^5.1.4",
     "react-responsive-carousel": "^3.2.22",
     "react-scripts": "^3.4.4",
+    "simple-react-lightbox": "^3.6.9-0",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
