--- a/Skola/projektarbete-react-ht21/projektarbete/package.json
+++ b/Skola/projektarbete-react-ht21/projektarbete/package.json
@@ -15,6 +15,7 @@
     "react-image-gallery": "^1.2.7",
     "react-image-lightbox": "^5.1.4",
     "react-responsive-carousel": "^3.2.22",
+    "react-router-dom": "^6.0.2",
     "react-scripts": "^3.4.4",
     "simple-react-lightbox": "^3.6.9-0",
     "web-vitals": "^1.1.2"
